Sat Feb 17 13:37:37 MET 2001   Raphael Manfredi <Raphael_Manfredi@pobox.com>

. Description:

	Version 1.0.10.

	Forgot to increase version number at previous patch (there were
	two of them, which is why we jump from 1.0.8 to 1.0.10).

Sat Feb 17 13:35:00 MET 2001   Raphael Manfredi <Raphael_Manfredi@pobox.com>

. Description:

	Version 1.0.8, binary format 2.4.

	Fixed incorrect error message.

	Now bless objects ASAP at retrieve time, which is meant to fix
	two bugs:

	* Indirect references to overloaded object were not able to
	  restore overloading if the object was not blessed yet,
	  which was possible since blessing occurred only after the
	  recursive retrieval.

	* Storable hooks asking for serialization of blessed ref could
	  get un-blessed refs at retrieval time, for the very same
	  reason.

	The fix implemented here was suggested by Nick Ing-Simmons.

	Added support for blessed ref to tied structures.  This is the
	cause for the binary format change.

	Added EBCDIC version of the compatibility test with 0.6.11,
	from Peter Prymmer

	Added tests for the new features, and to make sure the bugs they
	are meant to fix are indeed fixed.

Wed Jan  3 10:43:18 MET 2001   Raphael Manfredi <Raphael_Manfredi@pobox.com>

. Description:

	Removed spurious 'clean' entry in Makefile.PL.

	Added CAN_FLOCK to determine whether we can flock() or not,
	by inspecting Perl's configuration parameters, as determined
	by Configure.

	Trace offending package when overloading cannot be restored
	on a scalar.

	Made context cleanup safer to avoid dup freeing, mostly in the
	presence of repeated exceptions during store/retrieve (which can
	cause memory leaks anyway, so it's just additional safety, not a
	definite fix).

Sun Nov  5 18:23:48 MET 2000   Raphael Manfredi <Raphael_Manfredi@pobox.com>

. Description:

	Version 1.0.6.

	Fixed severe "object lost" bug for STORABLE_freeze returns,
	when refs to lexicals, taken within the hook, were to be